# redlight

./: AGENTS.md  CHANGELOG.md  CMakeLists.txt  README.md
.claude/: settings.local.json
.github/workflows/: build.yml
docs/: magnification-probe.md
experiments/: MagRedProbe.cpp
resources/: app.rc
src/: Diagnostics.cpp  Diagnostics.h  DisplayFilter.h  GammaRampFilter.cpp  GammaRampFilter.h  MagnificationFilter.cpp  MagnificationFilter.h  main.cpp
